--- a/.github/workflows/sync-code-from-main-repo.yaml
+++ b/.github/workflows/sync-code-from-main-repo.yaml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Đảm bảo lấy toàn bộ lịch sử
-          ref: main
+          ref: master
 
       - name: Setup Git
         run: |
